# nwsweb

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  WORKLOG.md  demo-3d.html  demo-loading-screen.html  eslint.config.js  fable-3d.mjs  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
.claude/: settings.json
data/: airport-gates.json  changelog.json  fleet-snapshot.json  pilots-roster.json  social-gallery-picks.json  tmp_pilot.json  tmp_pireps_user.json  vamsys-pilots.json  vamsys-raw-response.json
data/msfs-hub/: releases.json
deploy/prod/: deploy_prod.ps1  deploy_prod.sh  nginx_vnws.conf.example  nwsweb-api.service  nwsweb-site.service  vnws.service.example
deploy/systemd/: nwsbot-stream.service  telegram-bot.service
discord-bot/: DIAGNOSTIC_GUIDE.md  README.md  badges_card.py  package-lock.json  package.json  profile_card.py
discord-bot/src/: index.js
scripts/: build-social-gallery-picks.js  changelog-from-git.mjs  free_port_8787.ps1  generate-vamsys-mapping.js  save-vamsys-token.ps1  seed_and_probe.js  smoke-admin-routes.js  test-auth.js  test-vamsys.js
server/: discord-daily-stats-card.py  email-campaigns.js  index.js  site.js
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  sim.rs
src/app/: App.tsx  api-base.ts  app-session.ts  routes.ts
src/styles/: fonts.css  index.css
telegram-bot/: README.md  package-lock.json  package.json
twitch-youtube-bot/: package.json
vk-bot/: README.md  package.json
(+217 files in other folders)
